fix: paths, add sigs, minors

--- a/mystyle.css
+++ b/mystyle.css
@@ -4,7 +4,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #0a0a0a;
+  background-color: #000000;
   color: #d0d0d0;
   font-family: "VT323", monospace;
   line-height: 1.5;
